// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Accordion renders correctly 1`] = `
<test>
  <div
    class="ecl-accordion"
    data-ecl-accordion="true"
    data-ecl-auto-init="Accordion"
  >
    <h3
      class="ecl-accordion__title"
    >
      <button
        aria-controls="accordion-example-content"
        class="ecl-button ecl-button--ghost ecl-accordion__toggle"
        data-ecl-accordion-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/icons#general--digital"
            />
          </svg>
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
          </span>
        </span>
      </button>
    </h3>
    <div
      class="ecl-accordion__content"
      hidden=""
      id="accordion-example-content"
      role="region"
    >
      The College of Commissioners held today the first weekly meeting of 2019 which was devoted to discussing the challenges of this new year. Commissioners used the opportunity to take stock and discuss the year ahead, including the European elections in May and other important milestones ahead.
    </div>
    <h3
      class="ecl-accordion__title"
    >
      <button
        aria-controls="accordion-example2-content"
        class="ecl-button ecl-button--ghost ecl-accordion__toggle"
        data-ecl-accordion-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/icons#general--growth"
            />
          </svg>
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Spring 2019 Economic Forecast: Growth continues at a more moderate pace
          </span>
        </span>
      </button>
    </h3>
    <div
      class="ecl-accordion__content"
      hidden=""
      id="accordion-example2-content"
      role="region"
    >
      The European economy is forecast to continue expanding for the seventh year in a row in 2019, with real GDP expected to grow in all EU Member States. As global uncertainties continue to weigh, domestic dynamics are set to support the European economy. Growth is expected to gather pace again next year.
    </div>
    <h3
      class="ecl-accordion__title"
    >
      <button
        aria-controls="accordion-example3-content"
        class="ecl-button ecl-button--ghost ecl-accordion__toggle"
        data-ecl-accordion-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/icons#general--regulation"
            />
          </svg>
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
          </span>
        </span>
      </button>
    </h3>
    <div
      class="ecl-accordion__content"
      hidden=""
      id="accordion-example3-content"
      role="region"
    >
      In the modern global economy trade is essential for growth, jobs and competiveness, and the EU is committed to maintaining an open and rules-based trading system. With the rising threat of protectionism and weakened commitment of large players to global trade governance, the EU must take the lead.
    </div>
  </div>
</test>
`;

exports[`EC - Accordion renders correctly with extra attributes 1`] = `
<test>
  <div
    class="ecl-accordion"
    data-ecl-accordion="true"
    data-ecl-auto-init="Accordion"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <h3
      class="ecl-accordion__title"
    >
      <button
        aria-controls="accordion-example-content"
        class="ecl-button ecl-button--ghost ecl-accordion__toggle"
        data-ecl-accordion-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/icons#general--digital"
            />
          </svg>
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
          </span>
        </span>
      </button>
    </h3>
    <div
      class="ecl-accordion__content"
      hidden=""
      id="accordion-example-content"
      role="region"
    >
      The College of Commissioners held today the first weekly meeting of 2019 which was devoted to discussing the challenges of this new year. Commissioners used the opportunity to take stock and discuss the year ahead, including the European elections in May and other important milestones ahead.
    </div>
    <h3
      class="ecl-accordion__title"
    >
      <button
        aria-controls="accordion-example2-content"
        class="ecl-button ecl-button--ghost ecl-accordion__toggle"
        data-ecl-accordion-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/icons#general--growth"
            />
          </svg>
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Spring 2019 Economic Forecast: Growth continues at a more moderate pace
          </span>
        </span>
      </button>
    </h3>
    <div
      class="ecl-accordion__content"
      hidden=""
      id="accordion-example2-content"
      role="region"
    >
      The European economy is forecast to continue expanding for the seventh year in a row in 2019, with real GDP expected to grow in all EU Member States. As global uncertainties continue to weigh, domestic dynamics are set to support the European economy. Growth is expected to gather pace again next year.
    </div>
    <h3
      class="ecl-accordion__title"
    >
      <button
        aria-controls="accordion-example3-content"
        class="ecl-button ecl-button--ghost ecl-accordion__toggle"
        data-ecl-accordion-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/icons#general--regulation"
            />
          </svg>
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
          </span>
        </span>
      </button>
    </h3>
    <div
      class="ecl-accordion__content"
      hidden=""
      id="accordion-example3-content"
      role="region"
    >
      In the modern global economy trade is essential for growth, jobs and competiveness, and the EU is committed to maintaining an open and rules-based trading system. With the rising threat of protectionism and weakened commitment of large players to global trade governance, the EU must take the lead.
    </div>
  </div>
</test>
`;

exports[`EC - Accordion renders correctly with extra class names 1`] = `
<test>
  <div
    class="ecl-accordion custom-class custom-class--test"
    data-ecl-accordion="true"
    data-ecl-auto-init="Accordion"
  >
    <h3
      class="ecl-accordion__title"
    >
      <button
        aria-controls="accordion-example-content"
        class="ecl-button ecl-button--ghost ecl-accordion__toggle"
        data-ecl-accordion-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/icons#general--digital"
            />
          </svg>
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
          </span>
        </span>
      </button>
    </h3>
    <div
      class="ecl-accordion__content"
      hidden=""
      id="accordion-example-content"
      role="region"
    >
      The College of Commissioners held today the first weekly meeting of 2019 which was devoted to discussing the challenges of this new year. Commissioners used the opportunity to take stock and discuss the year ahead, including the European elections in May and other important milestones ahead.
    </div>
    <h3
      class="ecl-accordion__title"
    >
      <button
        aria-controls="accordion-example2-content"
        class="ecl-button ecl-button--ghost ecl-accordion__toggle"
        data-ecl-accordion-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/icons#general--growth"
            />
          </svg>
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Spring 2019 Economic Forecast: Growth continues at a more moderate pace
          </span>
        </span>
      </button>
    </h3>
    <div
      class="ecl-accordion__content"
      hidden=""
      id="accordion-example2-content"
      role="region"
    >
      The European economy is forecast to continue expanding for the seventh year in a row in 2019, with real GDP expected to grow in all EU Member States. As global uncertainties continue to weigh, domestic dynamics are set to support the European economy. Growth is expected to gather pace again next year.
    </div>
    <h3
      class="ecl-accordion__title"
    >
      <button
        aria-controls="accordion-example3-content"
        class="ecl-button ecl-button--ghost ecl-accordion__toggle"
        data-ecl-accordion-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/icons#general--regulation"
            />
          </svg>
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
          </span>
        </span>
      </button>
    </h3>
    <div
      class="ecl-accordion__content"
      hidden=""
      id="accordion-example3-content"
      role="region"
    >
      In the modern global economy trade is essential for growth, jobs and competiveness, and the EU is committed to maintaining an open and rules-based trading system. With the rising threat of protectionism and weakened commitment of large players to global trade governance, the EU must take the lead.
    </div>
  </div>
</test>
`;

exports[`EC - Accordion with validation enabled and missing input data returns the right warning message 1`] = `
<test>
  <div
    class="ecl-accordion"
    data-ecl-accordion="true"
    data-ecl-auto-init="Accordion"
  >
    <h3
      class="ecl-accordion__title"
    >
      <button
        aria-controls=""
        class="ecl-button ecl-button--ghost ecl-accordion__toggle"
        data-ecl-accordion-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/icons#general--digital"
            />
          </svg>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[icon] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="static/icons#notifications--success"
              />
            </svg>
          </span>
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          />
        </span>
      </button>
      <span
        class="ecl-u-type-color-red ecl-compliance-inner ecl-compliance-failure ecl-u-ma-2xs"
        title="[button--ghost] - {{ label }} property needs to set and filled in."
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="static/icons#notifications--error"
          />
        </svg>
      </span>
    </h3>
    <div
      class="ecl-accordion__content"
      hidden=""
      id=""
      role="region"
    >
      The College of Commissioners held today the first weekly meeting of 2019 which was devoted to discussing the challenges of this new year. Commissioners used the opportunity to take stock and discuss the year ahead, including the European elections in May and other important milestones ahead.
    </div>
    <h3
      class="ecl-accordion__title"
    >
      <button
        aria-controls="accordion-example2-content"
        class="ecl-button ecl-button--ghost ecl-accordion__toggle"
        data-ecl-accordion-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/icons#general--growth"
            />
          </svg>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[icon] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="static/icons#notifications--success"
              />
            </svg>
          </span>
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Spring 2019 Economic Forecast: Growth continues at a more moderate pace
          </span>
        </span>
      </button>
      <span
        class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
        title="[button--ghost] - ecl compliant"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="static/icons#notifications--success"
          />
        </svg>
      </span>
    </h3>
    <div
      class="ecl-accordion__content"
      hidden=""
      id="accordion-example2-content"
      role="region"
    >
      The European economy is forecast to continue expanding for the seventh year in a row in 2019, with real GDP expected to grow in all EU Member States. As global uncertainties continue to weigh, domestic dynamics are set to support the European economy. Growth is expected to gather pace again next year.
    </div>
    <h3
      class="ecl-accordion__title"
    >
      <button
        aria-controls="accordion-example3-content"
        class="ecl-button ecl-button--ghost ecl-accordion__toggle"
        data-ecl-accordion-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--before"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="static/icons#general--regulation"
            />
          </svg>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[icon] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="static/icons#notifications--success"
              />
            </svg>
          </span>
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
          </span>
        </span>
      </button>
      <span
        class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
        title="[button--ghost] - ecl compliant"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="static/icons#notifications--success"
          />
        </svg>
      </span>
    </h3>
    <div
      class="ecl-accordion__content"
      hidden=""
      id="accordion-example3-content"
      role="region"
    >
      In the modern global economy trade is essential for growth, jobs and competiveness, and the EU is committed to maintaining an open and rules-based trading system. With the rising threat of protectionism and weakened commitment of large players to global trade governance, the EU must take the lead.
    </div>
  </div>
  <!-- ecl2-compliance: accordion -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [accordion] -  The {{ id }} property needs to be set in every item to make the component work. {{ label }} property needs to be set to properly render the item.
    </p>
  </div>
</test>
`;
